# CarbonX

./: .env.example  .gitignore  README.md  pyproject.toml  run_experiments.py  verify.py
carbonx/: __init__.py  budget_manager.py  carbon_accounting.py  cli.py  config.py  main.py
carbonx/api/: __init__.py  main.py  schemas.py
carbonx/cache/: __init__.py  semantic_cache.py
carbonx/data/: __init__.py  carbon_intensity.py  energy_telemetry.py
carbonx/inference/: __init__.py  adaptive_runtime.py  complexity_estimator.py  early_exit.py  model_pool.py
carbonx/scheduler/: __init__.py  defer_queue.py  demand_shaper.py  green_scheduler.py
carbonx/simulator/: __init__.py  digital_twin.py  workload_generator.py
carbonx/telemetry/: __init__.py  collector.py  prometheus_exporter.py
experiments/: __init__.py  benchmark.py  comparison.py  datasets.py  visualize.py
frontend/: index.html
paper/: README.md  carbonx_paper.tex
tests/: test_carbonx.py
