[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbonx"
version = "0.1.0"
description = "CarbonX: A Carbon-First, Open-Source Framework for Sustainable LLM Inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ashutosh Yadav"}
]
keywords = ["carbon-aware", "green-ai", "llm", "sustainable-inference", "energy-efficient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "redis>=5.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
carbonx = "carbonx.cli:main"

[project.urls]
Homepage = "https://github.com/ashutoshyadav/carbonx"
Documentation = "https://github.com/ashutoshyadav/carbonx#readme"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
